# code-scan-docs

./: .all-contributorsrc  .csdrc.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.csd_cache/: test_input.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature.yaml  task.yaml
.github/workflows/: assignment.yaml  quality-gate.yaml
docs/: README.md
docs/adrs/: 0001-adoption-rust-core-python-plugins.md  0002-flexible-llm-integration.md  README.md
docs/architecture/: README.md
docs/standards/: README.md
docs/standards/code/: python.md  rust.md
plugins/: python_analyzer.py  rust_analyzer.py
plugins/input/: python_analyzer.py  rust_analyzer.py
plugins/input/code/: python_analyzer.py  rust_analyzer.py
plugins/output/: markdown_docs.py
plugins/output/docs/: markdown_docs.py
plugins/shared/: __init__.py  base_analyzer.py  base_output.py  llm_utils.py
plugins/shared/python/: README.md  setup.py
plugins/shared/python/csd_plugin_sdk/: __init__.py  _version.py
plugins/shared/python/csd_plugin_sdk/base/: __init__.py  input.py  output.py
plugins/shared/python/csd_plugin_sdk/utils/: __init__.py  llm.py
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/core/: matrix.rs  mod.rs  scanner.rs
src/llm/: mod.rs
src/output/: mod.rs
src/plugins/: communication.rs  interface.rs  manager.rs  mod.rs
src/utils/: config.rs  mod.rs
tests/python/: README.md  __init__.py  conftest.py  requirements.txt  run_tests.py  test_base_analyzer.py  test_python_analyzer.py  test_rust_analyzer.py
tests/rust/: README.md  mod.rs
tests/rust/cli/: mod.rs  test_args.rs
tests/rust/core/: mod.rs  test_matrix.rs  test_scanner.rs
tests/rust/plugins/: mod.rs  test_interface.rs
tests/rust/utils/: mod.rs  test_config.rs
