[package]
name = "csd"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive code analysis and documentation tool"
license = "MIT"
repository = "https://github.com/yourusername/code-scan-docs"
keywords = ["code-analysis", "documentation", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "csd"
path = "src/main.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"

# File system and path handling
walkdir = "2.4"
glob = "0.3"
ignore = "0.4"  # For respecting .gitignore files

# Logging and error handling
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Data structures and utilities
indexmap = "2.0"  # For maintaining order in maps
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"     # For file hashing

# Graph data structures (for dependency matrix)
petgraph = "0.6"

# Progress reporting
indicatif = "0.17"

# Configuration and templates
handlebars = "4.4"  # For report templates

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
# Optimize for binary size and performance
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation during development
incremental = true
debug = true
